cabal-version: 2.0

name: timer-wheel
version: 0.1.0
category: Data
description:
  This library provides a timer wheel data structure for
  .
  * /O(1)/ registering @IO@ actions to fire after a given amount of time
  * /O(1)/ canceling registered actions
  .
  It is similar to @TimerManager@ from "GHC.Event", but can scale much better,
  especially under concurrent access patterns.
synopsis: A timer wheel
author: Mitchell Rosen
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
homepage: https://github.com/mitchellwrosen/timer-wheel
bug-reports: https://github.com/mitchellwrosen/timer-wheel/issues
copyright: (c) 2018, Mitchell Rosen
license: BSD3
license-file: LICENSE
build-type: Simple
tested-with: GHC == 8.4.2

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/timer-wheel.git

flag debug
  default: False
  manual: True

library
  ghc-options: -Wall -Wcompat
  build-depends:
      entries-impls
    , timer-wheel-indef
  reexported-modules:
      Data.TimerWheel.List
    , Data.TimerWheel.SortedList
    , Data.TimerWheel.PSQ
  mixins:
      timer-wheel-indef
        (Data.TimerWheel as Data.TimerWheel.List)
      requires
        (Entries as Entries.List)
    , timer-wheel-indef
        (Data.TimerWheel as Data.TimerWheel.SortedList)
      requires
        (Entries as Entries.SortedList)
    , timer-wheel-indef
        (Data.TimerWheel as Data.TimerWheel.PSQ)
      requires
        (Entries as Entries.PSQ)
  default-extensions: NoImplicitPrelude
  default-language: Haskell2010

library timer-wheel-indef
  hs-source-dirs: src/timer-wheel-indef
  ghc-options: -Wall
  build-depends:
      atomic-primops ^>= 0.8
    , base ^>= 4.11
    , ghc-prim ^>= 0.5
    , primitive ^>= 0.6
  signatures: Entries
  exposed-modules:
    Data.TimerWheel
  other-modules:
    Debug
    Supply
  if flag(debug)
    cpp-options: -DDEBUG
  default-language: Haskell2010

-- Internal library to load into the repl
-- library timer-wheel-repl
--   ghc-options: -Wall
--   build-depends:
--       base
--     , entries-impls
--     , timer-wheel-indef
--   mixins:
--       timer-wheel-indef
--         (Data.TimerWheel as Data.TimerWheel.List)
--       requires
--         (Entries as Entries.List)
--     , timer-wheel-indef
--         (Data.TimerWheel as Data.TimerWheel.SortedList)
--       requires
--         (Entries as Entries.SortedList)
--     , timer-wheel-indef
--         (Data.TimerWheel as Data.TimerWheel.PSQ)
--       requires
--         (Entries as Entries.PSQ)
--   default-language: Haskell2010

library entries-impls
  hs-source-dirs: src/entries-impls
  ghc-options: -Wall -Wcompat
  build-depends:
      base ^>= 4.11
    , psqueues ^>= 0.2.7
  exposed-modules:
    Entries.List
    Entries.PSQ
    Entries.SortedList
  other-modules:
    Entries.List.Common
  default-language: Haskell2010

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      async
    , base
    , entries-impls
    , random
    , timer-wheel-indef
  mixins:
      timer-wheel-indef
        (Data.TimerWheel as Data.TimerWheel.List)
      requires
        (Entries as Entries.List)
    , timer-wheel-indef
        (Data.TimerWheel as Data.TimerWheel.SortedList)
      requires
        (Entries as Entries.SortedList)
    , timer-wheel-indef
        (Data.TimerWheel as Data.TimerWheel.PSQ)
      requires
        (Entries as Entries.PSQ)
  default-language: Haskell2010
