cabal-version: 2.2

name: timer-wheel
version: 0.4.0.1
x-revision: 1
category: Data
description:
  This library provides a timer wheel data structure for
  .
  * (Almost) /O(1)/ registering @IO@ actions to fire after a given amount of time
  * /O(1)/ canceling registered actions
  .
  It is similar to @TimerManager@ from @GHC.Event@, but supports recurring
  actions, and can scale to handle many more registered actions.
  .
synopsis: A timer wheel
author: Mitchell Rosen
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
homepage: https://github.com/awkward-squad/timer-wheel
bug-reports: https://github.com/awkward-squad/timer-wheel/issues
copyright: (c) 2018-2023 Mitchell Rosen, Travis Staton
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with: GHC == 9.2.7, GHC == 9.4.4, GHC == 9.6.1

extra-source-files:
  CHANGELOG.md
  README.md
  cabal.project

source-repository head
  type: git
  location: git://github.com/awkward-squad/timer-wheel.git

common component
  build-depends:
    base ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18,
  default-extensions:
    BangPatterns
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    RecursiveDo
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: component
  build-depends:
    atomic-primops ^>= 0.8,
    ki ^>= 1.0.0,
    primitive ^>= 0.7 || ^>= 0.8,
    psqueues ^>= 0.2.7,
  exposed-modules:
    TimerWheel
  hs-source-dirs: src
  other-modules:
    TimerWheel.Internal.Counter
    TimerWheel.Internal.Entries
    TimerWheel.Internal.Micros
    TimerWheel.Internal.Prelude
    TimerWheel.Internal.Timestamp

test-suite tests
  import: component
  build-depends:
    timer-wheel,
  ghc-options: -threaded -with-rtsopts=-N2
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0

-- benchmark bench
--   import: component
--   build-depends:
--     atomic-primops,
--     ki,
--     primitive,
--     psqueues,
--     random ^>= 1.2,
--     tasty-bench,
--   ghc-options: -fproc-alignment=64 -O "-with-rtsopts=-T -A32m"
--   hs-source-dirs: bench, src
--   main-is: Main.hs
--   other-modules:
--     TimerWheel
--     TimerWheel.Internal.Counter
--     TimerWheel.Internal.Entries
--     TimerWheel.Internal.Micros
--     TimerWheel.Internal.Prelude
--     TimerWheel.Internal.Timestamp
--   type: exitcode-stdio-1.0
